# ista-python-analisis-2025

lab1_python_3_12_ejercicios/: A1_funciones_con_valores.py  A2_funciones_internas.py  B1_validacion_de_entradas.py  B2_exepciones_personalizadas.py  C1_decoradores.py
lab2_modulos_paquetes_tipado_python_3_12/: main.py  notas-lab-2.md
lab2_modulos_paquetes_tipado_python_3_12/A_modulos/: __init__.py  calculadora.py  operaciones_aritmeticas.py  textos.py
lab_analisis_pandas/: lab_duckdb.py  pandas_analisis.py  summary_by_department.csv  summary_by_department_duckdb.csv
lab_clase5_pytest_csv_python_3_12/csv_pytest/: leer_csv.py  test.md  test.py
lab_clase5_pytest_csv_python_3_12/probando_pytest/: modulo_simple_probando_pytest.py  test.md  test.py
proyecto_final/: INFORME_TECNICO_COVID19.md  README.md  pyproject.toml  reporte_covid_ecuador_peru.xlsx  tabla_perfilado.csv
proyecto_final/.tmp_dagster_home_xym3tl_s/history/: runs.db
proyecto_final/.tmp_dagster_home_xym3tl_s/history/runs/: index.db
proyecto_final/.tmp_dagster_home_xym3tl_s/schedules/: schedules.db
proyecto_final/src/proyecto_final/defs/: assets.py
